feature/ajustes finais nas rotas, criação do endpoint para exibir o swagger e ajustes organização geral do swagger
