# src/validations/registerValidation.js
@@ -5,5 +5,5 @@ export const registerSchema = z.object({
   email: z.email("Email inválido"),
   senha: z.string().min(6, "Senha deve ter pelo menos 6 caracteres"),
   cpf: z.string().min(11).max(14),
-  telefone: z.string().optional(),
+  telefone: z.string().min(1, { message: "O telefone é obrigatório." }),
 });
